[gd_scene load_steps=21 format=3 uid="uid://b7fecdpuah10g"]

[ext_resource type="Script" uid="uid://bu05imyuwv2yl" path="res://scenes/game_ui/dialog_system/dialog_panel.gd" id="1_0om7c"]
[ext_resource type="PackedScene" uid="uid://bv5ulmbmtwuyw" path="res://scenes/game_ui/input_prompt.tscn" id="1_aby5p"]
[ext_resource type="Theme" uid="uid://d31137rsk15ng" path="res://resources/themes/expedition.tres" id="1_wq83t"]
[ext_resource type="AudioStream" uid="uid://dbotfhw3rag17" path="res://Audio/Originals/Voices/Voice_Low_1.wav" id="2_5ms7g"]
[ext_resource type="AudioStream" uid="uid://cvrqo1dxk60x7" path="res://Audio/Originals/Voices/Voice_Low_2.wav" id="3_wq83t"]
[ext_resource type="AudioStream" uid="uid://cahp66k86kh4s" path="res://Audio/Originals/Voices/Voice_Low_3.wav" id="4_aby5p"]
[ext_resource type="Script" uid="uid://54xncp1ljmib" path="res://scenes/game_ui/dialog_system/dialog_audio.gd" id="5_h8nx1"]
[ext_resource type="AudioStream" uid="uid://l576evkx8hub" path="res://Audio/Originals/Voices/Voice_High_1.wav" id="6_5ms7g"]
[ext_resource type="AudioStream" uid="uid://dukneovmhds8d" path="res://Audio/Originals/Voices/Voice_High_2.wav" id="7_wq83t"]
[ext_resource type="AudioStream" uid="uid://ba44uiw132ea6" path="res://Audio/Originals/Voices/Voice_High_3.wav" id="8_aby5p"]
[ext_resource type="AudioStream" uid="uid://c3wuimyws51ls" path="res://Audio/Originals/Voices/Voice_Medium_1.wav" id="9_h8nx1"]
[ext_resource type="AudioStream" uid="uid://bkv8h0t6g28p0" path="res://Audio/Originals/Voices/Voice_Medium_2.wav" id="10_v8oon"]
[ext_resource type="AudioStream" uid="uid://df0t1r42poy3q" path="res://Audio/Originals/Voices/Voice_Medium_3.wav" id="11_vbyli"]
[ext_resource type="Texture2D" uid="uid://ddoafuh8eydxx" path="res://assets/ui/Portrait_Nine.png" id="13_v8oon"]
[ext_resource type="Texture2D" uid="uid://c2d5yk8vqug7r" path="res://assets/character/cowboy/cowboy_portrait.png" id="14_vbyli"]
[ext_resource type="PackedScene" uid="uid://cv7bo2ctxp5bg" path="res://scenes/game_ui/dynamic_input_prompt.tscn" id="15_odk3v"]
[ext_resource type="Texture2D" uid="uid://dxrhgcfwptt3d" path="res://assets/ui/Textbox_Nine.png" id="16_odk3v"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_0ag80"]
random_pitch = 1.1
random_volume_offset_db = 0.2
streams_count = 3
stream_0/stream = ExtResource("2_5ms7g")
stream_1/stream = ExtResource("3_wq83t")
stream_2/stream = ExtResource("4_aby5p")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vbyli"]

[sub_resource type="LabelSettings" id="LabelSettings_7d2xt"]
font_size = 26
font_color = Color(0.30588236, 0.2, 0.15686275, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_wq83t")
script = ExtResource("1_0om7c")

[node name="DialogAudio" type="AudioStreamPlayer" parent="."]
process_mode = 1
stream = SubResource("AudioStreamRandomizer_0ag80")
volume_db = -8.0
mix_target = 2
bus = &"SFX"
script = ExtResource("5_h8nx1")
voice_high = Array[AudioStreamWAV]([ExtResource("6_5ms7g"), ExtResource("7_wq83t"), ExtResource("8_aby5p")])
voice_medium = Array[AudioStreamWAV]([ExtResource("9_h8nx1"), ExtResource("10_v8oon"), ExtResource("11_vbyli")])
voice_low = Array[AudioStreamWAV]([ExtResource("2_5ms7g"), ExtResource("3_wq83t"), ExtResource("4_aby5p")])

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100
theme_override_styles/separator = SubResource("StyleBoxEmpty_vbyli")

[node name="PortraitContainer" type="NinePatchRect" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
texture = ExtResource("13_v8oon")
patch_margin_left = 55
patch_margin_top = 55
patch_margin_right = 55
patch_margin_bottom = 22

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/PortraitContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 22
theme_override_constants/margin_top = 22
theme_override_constants/margin_right = 22
theme_override_constants/margin_bottom = 22

[node name="Portrait" type="TextureRect" parent="VBoxContainer/HBoxContainer/PortraitContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("14_vbyli")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8
alignment = 1

[node name="InputPromptSell" parent="VBoxContainer/HBoxContainer/HBoxContainer" instance=ExtResource("15_odk3v")]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
disabled_text = "Not carrying Shroom!"
disabled_modulate = Color(0.641934, 0.641934, 0.641934, 1)
text = "Sell Shroom"

[node name="InputPrompt" parent="VBoxContainer/HBoxContainer/HBoxContainer" instance=ExtResource("1_aby5p")]
custom_minimum_size = Vector2(200, 66)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8
text = "Continue"
action_name = "skip_dialogue"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100
theme_override_styles/separator = SubResource("StyleBoxEmpty_vbyli")

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 100
theme_override_styles/separator = SubResource("StyleBoxEmpty_vbyli")

[node name="DialogPanel" type="NinePatchRect" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_wq83t")
texture = ExtResource("16_odk3v")
patch_margin_left = 54
patch_margin_top = 54
patch_margin_right = 54
patch_margin_bottom = 54

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer2/DialogPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 54
theme_override_constants/margin_top = 54
theme_override_constants/margin_right = 54
theme_override_constants/margin_bottom = 54

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/DialogPanel/MarginContainer"]
custom_minimum_size = Vector2(100, 120)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.30588236, 0.2, 0.15686275, 1)
label_settings = SubResource("LabelSettings_7d2xt")
autowrap_mode = 3

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 100
theme_override_styles/separator = SubResource("StyleBoxEmpty_vbyli")
